log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:50:55 AM UTC: 
 tests:  0|6
total_score: 0/70
a25a403
Thu 30 Mar 2023 04:00:06 AM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:40: error: expected expression before ‘ArrayList’
   14 |   ArrayList *list= (ArrayList*) malloc(ArrayList);
      |                                        ^~~~~~~~~
arraylist.c:14:14: error: unused variable ‘list’ [-Werror=unused-variable]
   14 |   ArrayList *list= (ArrayList*) malloc(ArrayList);
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
ed9fcda
Thu 30 Mar 2023 04:00:52 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘list’ [-Werror=unused-variable]
   14 |   ArrayList *list= (ArrayList*) malloc(sizeof(ArrayList));
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
0527688
Thu 30 Mar 2023 04:01:33 AM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   15 |   if( list == NULL)
      |   ^~
arraylist.c:18:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   18 |     return NULL;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a521df0
Thu 30 Mar 2023 04:01:39 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6faa8e8
Thu 30 Mar 2023 04:01:52 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
20d69fa
Thu 30 Mar 2023 04:03:17 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:21:1: error: control reaches end of non-void function [-Werror=return-type]
   21 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
761ee3d
Thu 30 Mar 2023 04:03:47 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
aec4d26
Thu 30 Mar 2023 04:04:16 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
05505a9
Thu 30 Mar 2023 04:05:00 AM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
4aa08fd
Thu 30 Mar 2023 04:07:59 AM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
54baa4f
Thu 30 Mar 2023 04:08:11 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
66a674e
Thu 30 Mar 2023 04:08:17 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
70857a9
Thu 30 Mar 2023 04:08:35 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
b4fa732
Thu 30 Mar 2023 06:08:53 AM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
0ad3d42
Thu 30 Mar 2023 06:10:25 AM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:34:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   34 |   if (l->size = l->capacity) {
      |       ^
arraylist.c:36:12: error: unused variable ‘nueData’ [-Werror=unused-variable]
   36 |      void* nueData = realloc(l->data, nuevaCap * sizeof(void*));
      |            ^~~~~~~
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:57:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   57 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7221d21
Thu 30 Mar 2023 06:10:40 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:36:12: error: unused variable ‘nueData’ [-Werror=unused-variable]
   36 |      void* nueData = realloc(l->data, nuevaCap * sizeof(void*));
      |            ^~~~~~~
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:57:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   57 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4eb3892
